--- a/app/views/pages/intro.html.erb
+++ b/app/views/pages/intro.html.erb
@@ -58,7 +58,7 @@
   <div class="container mt-4">
     <div class="row justify-content-end">
       <div class="intro-card-color intro-card-size">
-        <h2>Forth title</h2>
+        <%=link_to "SignIn", user_session_path%>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>
         Magni porro recusandae illum maxime velit, eveniet, eligendi iusto sit saepe deleniti modi voluptatibus cumque.<br>
         Fuga exercitationem ullam laudantium, magnam quae hic!</p>
