--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,12 @@
           <%= f.error_notification %>
 
           <div class="form-inputs">
+            <%= f.input :firstName,
+                        required:true,
+                        autofocus:true %>
+            <%= f.input :lastName,
+                        required:true,
+                        autofocus:true %>
             <%= f.input :email,
                         required: true,
                         autofocus: true,
