--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,15 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-
+     <div class="form-inputs">
+    <%= f.input :firstName,
+                hint: "Update your First Name",
+                required: false
+                  %>
+    <%= f.input :lastName,
+                hint: "Update your Last Name",
+                required:false
+                  %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
