--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: rgba(255, 182, 48, 0.134);
+  background: rgba(255, 183, 48, 0.455);
+  margin-bottom: 30px;
 }
 
 .navbar-lewagon .navbar-collapse {
