--- a/app/assets/stylesheets/pages/_intro.scss
+++ b/app/assets/stylesheets/pages/_intro.scss
@@ -1,6 +1,12 @@
+html{
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+}
 body {
 	font-family: Arial;
 	color: #333;
+  height: 100%;
 }
 // #mappers-bg{
 //   background-image: url(blueGlobeWorked.png);
@@ -166,7 +172,7 @@ li {
   position: relative;
   height: 100%;
   background: linear-gradient(0deg, #FF8360 0%, #FEA581 100%);
-  padding: 50px;
+ 
 
 }
 .intro-card-color{
