--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,5 @@
 <div class="background">
+ <%= render "shared/navbar" %>
   <div class="container">
     <div class="row">
       <div class="col-3">
@@ -10,7 +11,7 @@
 
         <%= image_tag "userPlaceholder.png", class:"avatar-dash", :style => "width: 100px; border: 2px solid white; border-radius: 50%;" %>
         <div class="user-name d-flex align-items-center justify-content-center">
-          <h4> <strong>Martim Correia</strong></h4>
+          <h4><strong> <%=current_user.firstName%> <%= current_user.lastName %></strong></h4>
         </div>
         <div class="follows d-flex justify-content-evenly">
           <div class="following">
