--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -10,6 +10,7 @@
   height: 100px;
   border-radius: 25px;
   background-color: #F76E11;
+  margin: 54px 17px 67px;
 }
 .avatar-dash{
   position: absolute;
