--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -25,13 +25,11 @@
         </div>
 
        </div>
-       <div class="user-secondary-panel m-3">
+       <div class="user-secondary-panel">
        </div>
       </div>
       <div class="col">
-        <div id="map" data-controller="map" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>" style='width: 100%; height: 600px; border-radius: 25px;'>
-        </div>
-
+        <div id="map" data-controller="map" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>" style='width: 100%; height: 600px; border-radius: 25px;'></div>
       </div>
     </div>
   </div>
