--- a/app/views/pages/intro.html.erb
+++ b/app/views/pages/intro.html.erb
@@ -2,32 +2,34 @@
 <div class="background" data-controller="scrolling">
 
   <h1 id="mappers-bg" class="text-center intro-title">Mappers</h1>
-  <div class="horizontal-line"></div>
-  <div id="slider-wrapper" data-controller="fadein" >
-    <ul data-fadein-target="slider">
-      <li>
-        <div class="content hidden" data-fadein-target="first">
-          <h1>Find it...</h1>
-        </div>
-      </li>
-      <li>
-        <div class="content hidden" data-fadein-target="second">
-          <h1>Discover</h1>
-        </div>
-      </li>
-      <li>
-        <div class="content hidden" data-fadein-target="third">
-          <h1>Live it</h1>
-        </div>
-      </li>
-    </ul>
+  <div class="px-4">
+    <div class="horizontal-line"></div>
+    <div id="slider-wrapper" data-controller="fadein" >
+      <ul data-fadein-target="slider">
+        <li>
+          <div class="content hidden" data-fadein-target="first">
+            <h1>Find it...</h1>
+          </div>
+        </li>
+        <li>
+          <div class="content hidden" data-fadein-target="second">
+            <h1>Discover</h1>
+          </div>
+        </li>
+        <li>
+          <div class="content hidden" data-fadein-target="third">
+            <h1>Live it</h1>
+          </div>
+        </li>
+      </ul>
+    </div>
 
+    <div class="horizontal-line mt-5"></div>
   </div>
-  <div class="horizontal-line mt-5"></div>
   <h1 class="text-center intro-title my-5">Your Content Matters</h1>
   <div class="container mt-4">
     <div class="row">
-      <div class="intro-card-color intro-card-size">
+      <div class="col-1 intro-card-color intro-card-size">
         <h2>First Title</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>
         Magni porro recusandae illum maxime velit, eveniet, eligendi iusto sit saepe deleniti modi voluptatibus cumque.<br>
@@ -37,7 +39,7 @@
   </div>
   <div class="container mt-4">
     <div class="row justify-content-end">
-      <div class="intro-card-color intro-card-size">
+      <div class="col-5 intro-card-color intro-card-size">
         <h2>Second title</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>
         Magni porro recusandae illum maxime velit, eveniet, eligendi iusto sit saepe deleniti modi voluptatibus cumque.<br>
@@ -47,7 +49,7 @@
   </div>
   <div class="container mt-4">
     <div class="row">
-      <div class="intro-card-color intro-card-size">
+      <div class="col-5 intro-card-color intro-card-size">
         <h2>Third Title</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>
         Magni porro recusandae illum maxime velit, eveniet, eligendi iusto sit saepe deleniti modi voluptatibus cumque.<br>
