--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="background pt-0">
   <div class="container">
-  <div class="row">
-  <div class="col-12 filling"></div>
-  </div>
+
+    <div class="filling"></div>
+
 
     <div class="row justify-content-evenly align-items-center">
       <div class="col-12 col-md-6 col-xl-6">
-        <div class="row">
+
           <div class="col-12">
            <%= image_tag "blueGlobeLogo2", id:"regi-logo" %>
           </div>
@@ -52,7 +52,8 @@
         <%= render "devise/shared/links" %>
       </div>
     </div>
-     <div class="row">
-  <div class="col-12 filling"></div>
+
+    <div class="filling"></div>
   </div>
+
 </div>
